# geneo4PETSc

./: .codecov.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md  dev.sh  prq.sh
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
cmk/: FindMetis.cmake
doc/: CONTRIBUTING.md  WIKI.md
hdr/: CMakeLists.txt  geneo.hpp  geneo_c.h
pkg/: CMakeLists.txt  geneo4PETSc.pc
src/: CMakeLists.txt  geneo.cpp  geneo4PETSc.cpp
tst/: CMakeLists.txt  plot.py
tst/dummy/: B.inp  CMakeLists.txt  dummy.sh  identity-pc=bjacobi-metis=dual.ref  identity-pc=bjacobi-metis=nodal.ref  identity-pc=geneoASM0-metis=dual.ref  identity-pc=geneoASM0-metis=nodal.ref  identity-pc=geneoASM1-metis=dual-opt=offload.ref  identity-pc=geneoASM1-metis=dual-opt=overlap1.ref  identity-pc=geneoASM1-metis=dual.ref  identity-pc=geneoASM1-metis=nodal-opt=offload.ref  identity-pc=geneoASM1-metis=nodal-opt=overlap1.ref  identity-pc=geneoASM1-metis=nodal.ref  identity-pc=geneoASME1-metis=dual-opt=offload.ref  identity-pc=geneoASME1-metis=dual-opt=overlap1.ref  identity-pc=geneoASME1-metis=dual.ref  identity-pc=geneoASME1-metis=nodal-opt=offload.ref  identity-pc=geneoASME1-metis=nodal-opt=overlap1.ref  identity-pc=geneoASME1-metis=nodal.ref  identity-pc=geneoASMH1-metis=dual-opt=offload.ref  identity-pc=geneoASMH1-metis=dual-opt=overlap1.ref  identity-pc=geneoASMH1-metis=dual.ref  identity-pc=geneoASMH1-metis=nodal-opt=offload.ref  identity-pc=geneoASMH1-metis=nodal-opt=overlap1.ref  identity-pc=geneoASMH1-metis=nodal.ref  identity-pc=geneoSORAS0-metis=dual.ref  identity-pc=geneoSORAS0-metis=nodal.ref  identity-pc=geneoSORAS2-metis=dual-opt=offload.ref  identity-pc=geneoSORAS2-metis=dual-opt=overlap1.ref  identity-pc=geneoSORAS2-metis=dual.ref  identity-pc=geneoSORAS2-metis=nodal-opt=offload.ref  identity-pc=geneoSORAS2-metis=nodal-opt=overlap1.ref  identity-pc=geneoSORAS2-metis=nodal.ref  identity-pc=geneoSORASE2-metis=dual-opt=offload.ref  identity-pc=geneoSORASE2-metis=dual-opt=overlap1.ref  identity-pc=geneoSORASE2-metis=dual.ref  identity-pc=geneoSORASE2-metis=nodal-opt=offload.ref  identity-pc=geneoSORASE2-metis=nodal-opt=overlap1.ref  identity-pc=geneoSORASE2-metis=nodal.ref  identity-pc=geneoSORASH2-metis=dual-opt=offload.ref  (+49 more)
tst/graph/: CMakeLists.txt  graph.cpp  graphPlot.ref  graphPlot.sh  graphRun.sh  graphTest.sh
tst/heat/: CMakeLists.txt  heat.cpp  heatRun.sh  heatTest.sh
tst/laplacian/: CMakeLists.txt  laplacian.cpp  laplacianPlot.ref  laplacianPlot.sh  laplacianRun.sh  laplacianServices.cpp  laplacianServices.hpp  laplacianTest.sh
